Added viewport rendering.  * Changed gullp build task for copy.  * Added Angular-vs-repeat lib.  * Corrected eslint errors.

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/underscore/underscore.js"></script>
+    <script src="/bower_components/angular-vs-repeat/src/angular-vs-repeat.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
