--- a/app/templetes/main.html
+++ b/app/templetes/main.html
@@ -15,7 +15,7 @@
         <th>Created_at</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody vs-repeat="37">
       <tr ng-repeat="user in pageResults track by $index">
         <th scope="row">{{$index+1}}</th>
         <td>{{user.name}}</td>
